--- a/Puuka/index.html
+++ b/Puuka/index.html
@@ -408,10 +408,9 @@
               <div class="member-img">
                 <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">
                 <div class="social">
-                  <a href=""><i class="icofont-twitter"></i></a>
-                  <a href=""><i class="icofont-facebook"></i></a>
-                  <a href=""><i class="icofont-instagram"></i></a>
-                  <a href=""><i class="icofont-linkedin"></i></a>
+                  <a href="www.twitter.com/jesseequartey"><i class="icofont-twitter"></i></a>
+                  <a href="www.facebook.com/Jesse Quartey"><i class="icofont-facebook"></i></a>
+                  <a href="www.instagram.com/jessequartey"><i class="icofont-instagram"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -559,11 +558,11 @@
       <h3>Puuka</h3>
       <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
       <div class="social-links">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+        <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
         <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
         <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a> -->
       </div>
       <div class="copyright">
         &copy; Copyright <strong><span>Puuka</span></strong>. All Rights Reserved
